Fix vertical align of the logo

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -106,7 +106,6 @@ header .site-logo,
 footer .site-logo {
   height: 32px;
   width: 32px;
-  vertical-align: middle;
   margin-right: 10px;
 }
 
